included spacetrack dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,10 @@ dependencies:
   - pandas
   - pip
   - scipy
+  - requests
   - pip:
       - astropy
       - dash
       - dash_bootstrap_components
       - sgp4
+      - configsparser
