--- a/src/get_tles/SLTrack.ini
+++ b/src/get_tles/SLTrack.ini
@@ -1,3 +1,4 @@
-username = kuprety@stanfordedu
+[configuration]
+username = kuprety@stanford.edu
 password = amongUs02072002
-output = tleHistory.txt
+output = tleHistory
